appId: com.antelor.pokedexchallenge

---
- launchApp

- tapOn:
    id: "search-input"

- inputText: "notapokemon"

- assertVisible: "No matching results"